--- a/index.html
+++ b/index.html
@@ -328,28 +328,28 @@
 				</div>
 			</div>
 			<div class="JDSpike-box"><div class="JDSpike-box-img">
-					<img src="img/book.png" alt="">
+					<img src="img/华为.webp" alt="">
 				</div>
-				<div class="JDSpike-box-introduce">全套八册自我保护意识培养..</div>
+				<div class="JDSpike-box-introduce">华为（HUAWEI）华为nvo...</div>
 				<div class="JDSpike-box-much">
-					<div class="JDSpike-box-much-left">￥996.00</div>
-					<div class="JDSpike-box-much-right"><s>￥1992.00</s></div>
+					<div class="JDSpike-box-much-left">￥3399.00</div>
+					<div class="JDSpike-box-much-right"><s>￥3999.00</s></div>
 				</div></div>
 			<div class="JDSpike-box"><div class="JDSpike-box-img">
-					<img src="img/book.png" alt="">
+					<img src="img/数据线.webp" alt="">
 				</div>
-				<div class="JDSpike-box-introduce">全套八册自我保护意识培养..</div>
+				<div class="JDSpike-box-introduce">【二手99新】苹果数...</div>
 				<div class="JDSpike-box-much">
-					<div class="JDSpike-box-much-left">￥996.00</div>
-					<div class="JDSpike-box-much-right"><s>￥1992.00</s></div>
+					<div class="JDSpike-box-much-left">￥49.00</div>
+					<div class="JDSpike-box-much-right"><s>￥99.00</s></div>
 				</div></div>
 			<div class="JDSpike-box"><div class="JDSpike-box-img">
-					<img src="img/book.png" alt="">
+					<img src="img/彩电.webp" alt="">
 				</div>
-				<div class="JDSpike-box-introduce">全套八册自我保护意识培养..</div>
+				<div class="JDSpike-box-introduce">长虹43M143英寸蓝...</div>
 				<div class="JDSpike-box-much">
-					<div class="JDSpike-box-much-left">￥996.00</div>
-					<div class="JDSpike-box-much-right"><s>￥1992.00</s></div>
+					<div class="JDSpike-box-much-left">￥1273.00</div>
+					<div class="JDSpike-box-much-right"><s>￥2199.00</s></div>
 				</div></div>
 			<div class="JDSpike-box"><div class="JDSpike-box-killimg"><img src="img/秒杀手机.jpg" alt=""></div></div>
 		</div>
@@ -377,14 +377,16 @@
 						<div class="JDRanking-box-banner-one-text">三只松鼠坚果大礼包1698g/1753g火红A版每日坚果送礼网红零食坚果礼盒</div>
 					</div>
 					<div class="JDRanking-box-banner-one">
-						<div class="JDRanking-box-banner-one-img"><img src="img/topbanner1.png" alt=""></div>
-						<div class="JDRanking-box-banner-one-num">1</div>
-						<div class="JDRanking-box-banner-one-text">三只松鼠坚果大礼包1698g/1753g火红A版每日坚果送礼网红零食坚果礼盒</div>
+						<div class="JDRanking-box-banner-one-img"><img src="img/三只松鼠30.webp" alt=""></div>
+						<div class="JDRanking-box-banner-one-num" style="color: #ED713D;">2</div>
+						<div class="JDRanking-box-banner-one-text">三只松鼠每日坚果零食坚果大礼包孕妇零食小吃榛子巴旦木仁开心果混合果仁30袋</div>
 					</div>
 					<div class="JDRanking-box-banner-one">
-						<div class="JDRanking-box-banner-one-img"><img src="img/topbanner1.png" alt=""></div>
-						<div class="JDRanking-box-banner-one-num">1</div>
-						<div class="JDRanking-box-banner-one-text">三只松鼠坚果大礼包1698g/1753g火红A版每日坚果送礼网红零食坚果礼盒</div>
+						<div class="JDRanking-box-banner-one-img"><img src="img/三只松鼠2.webp" alt=""></div>
+						<div class="JDRanking-box-banner-one-num"style="color: #FEB185;">3</div>
+						<div class="JDRanking-box-banner-one-text">
+满199减120三只松鼠 开心果100g坚果炒货零食每日坚果 1袋装
+</div>
 					</div>
 				</div>
 				<div class="JDRanking-box-hengxian"></div>
@@ -398,15 +400,78 @@
 					<div>会买专辑</div>
 					<i class="iconfont icon-youbian"></i>
 					<span>甄选优质好物</span>
-					<div class="JDRanking-box-imgbanner">
-					</div>
+					
 				</div>
+				<div class="JDRanking-box-goodshop-img">
+									<img src="img/大表.webp" alt="">
+								</div>
+								<div class="JDRanking-box-goodshop-commodity">
+									<img src="img/表1.jpg" alt="">
+									<img src="img/表2.jpg" alt="">
+									<img src="img/表3.jpg" alt="">
+								</div>
+								<h3 class="JDRanking-box-goodshop-name">钢带手表，助职场的你显示男子气概</h3>
+								<div class="JDRanking-box-goodshop-text">
+相对于生活，职场中大多需要穿着正式，毕竟员工的形象亦能反映出公司的整体形象。因此上班前，对自己的着装</div>
 			</div>
 			<div class="JDRanking-box">
 				<div class="JDRanking-box-title">
 					<div>领券中心</div>
 					<i class="iconfont icon-youbian"></i>
 					<span>前往领券中心</span>
+				</div>
+				<div class="JDRanking-box-coupon">
+					<div class="JDRanking-box-coupon-box">
+						<div class="JDRanking-box-coupon-box-img">
+							<img src="img/面膜美迪惠尔.webp" alt="">
+						</div>
+						<div class="JDRanking-box-coupon-box-text">
+							<div class="JDRanking-box-coupon-box-text-one">
+								<i>￥</i><span>50</span>
+							</div>
+							<div class="JDRanking-box-coupon-box-text-two">满600可用</div>
+							<div class="JDRanking-box-coupon-box-text-three">自营美妆制定商品</div>
+						</div>
+						<div class="JDRanking-box-coupon-box-more">
+							<div class="JDRanking-box-coupon-box-more-inner">更多精选好券</div>
+						</div>
+						<div class="JDRanking-box-coupon-box-top"></div>
+						<div class="JDRanking-box-coupon-box-bottom"></div>
+					</div>
+					<div class="JDRanking-box-coupon-box">
+						<div class="JDRanking-box-coupon-box-img">
+							<img src="img/平板电脑.webp" alt="">
+						</div>
+						<div class="JDRanking-box-coupon-box-text">
+							<div class="JDRanking-box-coupon-box-text-one">
+								<i>￥</i><span>300</span>
+							</div>
+							<div class="JDRanking-box-coupon-box-text-two">满6000可用</div>
+							<div class="JDRanking-box-coupon-box-text-three">仅可购买指定平板电脑商品</div>
+						</div>
+						<div class="JDRanking-box-coupon-box-more">
+							<div class="JDRanking-box-coupon-box-more-inner">更多手机数码券</div>
+						</div>
+						<div class="JDRanking-box-coupon-box-top"></div>
+						<div class="JDRanking-box-coupon-box-bottom"></div>
+					</div>
+					<div class="JDRanking-box-coupon-box">
+						<div class="JDRanking-box-coupon-box-img">
+							<img src="img/红酒.webp" alt="">
+						</div>
+						<div class="JDRanking-box-coupon-box-text">
+							<div class="JDRanking-box-coupon-box-text-one">
+								<i>￥</i><span>20</span>
+							</div>
+							<div class="JDRanking-box-coupon-box-text-two">满199可用</div>
+							<div class="JDRanking-box-coupon-box-text-three">仅可购买部分葡萄酒商品</div>
+						</div>
+						<div class="JDRanking-box-coupon-box-more">
+							<div class="JDRanking-box-coupon-box-more-inner">更多食品饮料券</div>
+						</div>
+						<div class="JDRanking-box-coupon-box-top"></div>
+						<div class="JDRanking-box-coupon-box-bottom"></div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -447,8 +512,8 @@
 				</div>
 				<div class="JDRanking-box-goodshop-commodity">
 					<img src="img/5bc55773Ncaff3a10.jpg" alt="">
-					<img src="img/5bc55773Ncaff3a10.jpg" alt="">
-					<img src="img/5bc55773Ncaff3a10.jpg" alt="">
+					<img src="img/车1.jpg" alt="">
+					<img src="img/链子.jpg" alt="">
 				</div>
 				<h3 class="JDRanking-box-goodshop-name">心机办公，轻薄本演绎职场优雅范</h3>
 				<div class="JDRanking-box-goodshop-text">
@@ -470,13 +535,100 @@
 				</div>
 				<div class="JDRanking-box-clothesbox">
 					<img src="img/黄衣.webp" alt="">
-					<img src="img/黄衣.webp" alt="">
-					<img src="img/黄衣.webp" alt="">
+					<img src="img/黑鞋.webp" alt="">
+					<img src="img/男香水.webp" alt="">
 				</div>
 			</div>
 		</div>
 		<!-- 京东寻觅结束 -->
 		
+		<!-- 智能先锋开始 -->
+		<div class="JDAIflash-title">
+			<h3 class="JDAIflash-title-txt">
+				智能先锋
+			</h3>
+		</div>
+		<div class="JDAIflash-box1">
+			<div class="JDAIflash-phone">
+				<div class="JDAIflash-phone-title">
+					<div>手机频道</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>一个极客的诞生</span>
+				</div>
+				<div class="JDAIflash-phone-img">
+					<div class="JDAIflash-phone-img-mi"><img src="img/小米9.jpg" alt=""></div>
+					<div class="JDAIflash-phone-img-mi"><img src="img/小米免息.jpg" alt=""></div>
+				</div>
+				<div class="JDAIflash-phone-Manufacturer">
+					<div class="JDAIflash-phone-Manufacturer-heng">
+						<div class="JDAIflash-phone-Manufacturer-heng-img"><img src="img/苹果.jpg" alt=""></div>
+						<div class="JDAIflash-phone-Manufacturer-heng-img"><img src="img/华为.jpg" alt=""></div>
+						<div class="JDAIflash-phone-Manufacturer-heng-img"><img src="img/一家.jpg" alt=""></div>
+						<div class="JDAIflash-phone-Manufacturer-heng-img"><img src="img/三星.jpg" alt=""></div>
+					</div>
+					<div class="JDAIflash-phone-Manufacturer-heng">
+						<div class="JDAIflash-phone-Manufacturer-heng-img"><img src="img/oppo.jpg" alt=""></div>
+						<div class="JDAIflash-phone-Manufacturer-heng-img"><img src="img/vivo.jpg" alt=""></div>
+						<div class="JDAIflash-phone-Manufacturer-heng-img"><img src="img/天宇.jpg" alt=""></div>
+						<div class="JDAIflash-phone-Manufacturer-heng-img"><img src="img/小米.jpg" alt=""></div>
+					</div>
+					<div class="JDAIflash-phone-Manufacturer-heng">
+						<div class="JDAIflash-phone-Manufacturer-heng-img"><img src="img/摩托罗拉.jpg" alt=""></div>
+						<div class="JDAIflash-phone-Manufacturer-heng-img"><img src="img/索尼.jpg" alt=""></div>
+						<div class="JDAIflash-phone-Manufacturer-heng-img"><img src="img/这居然是卖手机的.jpg" alt=""></div>
+						<div class="JDAIflash-phone-Manufacturer-heng-img"><img src="img/锤子.jpg" alt=""></div>
+					</div>
+				</div>
+			</div>
+		
+		<div class="JDAIflash-phone">
+			<div class="JDAIflash-phone-title">
+				<div>新品首发</div>
+				<i class="iconfont icon-youbian"></i>
+				<span>贾队长，去看看情况</span>
+			</div>
+			<div class="JDAIflash-phone-bighuang">
+				<img src="img/大黄手机.png" alt="">
+			</div>
+		</div>
+		<div class="JDAIflash-phone3">
+			<div class="JDAIflash-phone3-img">
+				<img src="img/笔记本奶.jpg" alt="">
+			</div>
+			<div class="JDAIflash-phone3-border"></div>
+		</div>
+		</div>
+		<div class="JDAIflash-box1">
+			<div class="JDAIflash-computer">
+				<div class="JDAIflash-computer-img">
+					<img src="img/照相机.jpg" alt="">
+					<img src="img/显卡.jpg" alt="">
+				</div>
+				<div class="JDAIflash-computer-border"></div>
+			</div>
+			<div class="JDAIflash-phone">
+				<div class="JDAIflash-phone-title">
+					<div>头号玩家</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>骨灰级装备</span>
+				</div>
+				<div class="JDAIflash-phone-bighuang">
+					<img src="img/骨灰.jpg" alt="">
+				</div>
+			</div>
+			<div class="JDAIflash-phone">
+				<div class="JDAIflash-phone-title">
+					<div>电脑办公</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>智能炒货 嗨购不停</span>
+				</div>
+				<div class="JDAIflash-phone-bighuang">
+					<div class="JDAIflash-phone-bighuang-tb"><img src="img/电脑荞麦奶.jpg" alt=""></div>
+					<div class="JDAIflash-phone-bighuang-tb"><img src="img/电脑节.jpg" alt=""></div>
+				</div>
+			</div>
+		</div>
+		<!-- 智能先锋结束 -->
 		
 	</body>
 </html>
