--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 					<span>|</span>
 					<div class="JDheader-box-son-right-boxer">
 						<a href="">手机京东</a>
+						<div class="triangle"></div>
 						<div class="QRcode">
 							<img src="img/QR.png" alt="">
 						</div>
@@ -630,5 +631,285 @@
 		</div>
 		<!-- 智能先锋结束 -->
 		
+		<!-- 时尚达人开始 -->
+		<div class="JDAIflash-title">
+			<h3 class="JDAIflash-title-txt">
+				时尚达人
+			</h3>
+		</div>
+		<div class="JDAIflash-box1">
+			<div class="JDAIflash-phone">
+				<div class="JDAIflash-phone-title">
+					<div>运动户外</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>玩所未玩</span>
+				</div>
+				<div class="JDAIflash-phone-bighuang">
+					<div class="JDAIflash-phone-bighuang-tb"><img src="img/大牌鞋子.jpg" alt=""></div>
+					<div class="JDAIflash-phone-bighuang-tb">
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/健身轮子.jpg" alt=""></div>
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/亚瑟跑鞋.jpg" alt=""></div>
+					</div>
+				</div>
+			</div>
+			<div class="JDAIflash-phone">
+				<div class="JDAIflash-phone-title">
+					<div>魅力装扮</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>精致生活</span>
+				</div>
+				<div class="JDAIflash-phone-bighuang">
+					<div class="JDAIflash-phone-bighuang-tb"><img src="img/粉色香水.jpg" alt=""></div>
+					<div class="JDAIflash-phone-bighuang-tb">
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/粉色美妆.jpg" alt=""></div>
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/土色美瞳.jpg" alt=""></div>
+					</div>
+				</div>
+			</div>
+			<div class="JDAIflash-phone3">
+				<div class="JDAIflash-phone3-img">
+					<img src="img/蓝色洗面奶.jpg" alt="">
+				</div>
+				<div class="JDAIflash-phone3-border"></div>
+			</div>
+		</div>
+		<div class="JDAIflash-box1">
+			<div class="JDAIflash-computer">
+				<div class="JDAIflash-computer-img" style="width: 380px;height: 420px;">
+					<img src="img/绿色大鞋.jpg" alt="">
+				</div>
+				<div class="JDAIflash-computer-border"></div>
+			</div>
+			<div class="JDAIflash-phone">
+				<div class="JDAIflash-phone-title">
+					<div>魅力装扮</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>精致生活</span>
+				</div>
+				<div class="JDAIflash-phone-bighuang">
+					<div class="JDAIflash-phone-bighuang-tb"><img src="img/粉色香水.jpg" alt=""></div>
+					<div class="JDAIflash-phone-bighuang-tb">
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/粉色美妆.jpg" alt=""></div>
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/土色美瞳.jpg" alt=""></div>
+					</div>
+				</div>
+			</div>
+			<div class="JDRanking-box">
+				<div class="JDRanking-box-title">
+					<div>会逛</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>你想逛的都在这里</span>
+				</div>
+				<div class="JDRanking-box-redman">
+					<img src="img/绿色看不懂.jpg" alt="">
+				</div>
+				<div class="JDRanking-box-clothesbox">
+					<img src="img/洗厕所的.webp" alt="">
+					<img src="img/大概是发胶.webp" alt="">
+					<img src="img/玫瑰金手链.webp" alt="">
+				</div>
+			</div>
+		</div>
+		<div class="JDAIflash-box1">
+			<div class="JDRanking-box">
+				<div class="JDRanking-box-title">
+					<div>京东时尚</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>尽享时尚生活</span>
+				</div>
+				<div class="JDRanking-box-redman">
+					<img src="img/白色鞋包衣.jpg" alt="">
+				</div>
+				<div class="JDRanking-box-clothesbox">
+					<img src="img/白色红纹鞋.jpg" alt="">
+					<img src="img/蓝彪马T恤.jpg" alt="">
+					<img src="img/银色拉杆箱.jpg" alt="">
+				</div>
+			</div>
+			<div class="JDAIflash-phone">
+				<div class="JDAIflash-phone-title">
+					<div>我形我塑</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>时尚有我 品质衣橱</span>
+				</div>
+				<div class="JDAIflash-phone-bighuang">
+					<div class="JDAIflash-phone-bighuang-tb"><img src="img/蓝底黑白帽.jpg" alt=""></div>
+					<div class="JDAIflash-phone-bighuang-tb">
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/蓝底黄皮鞋.jpg" alt=""></div>
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/是落花十七.jpg" alt=""></div>
+					</div>
+				</div>
+			</div>
+			<div class="JDAIflash-computer">
+				<div class="JDAIflash-computer-img">
+					<img src="img/黄底黑驴包.jpg" alt="">
+					<img src="img/蓝底要死了.jpg" alt="">
+				</div>
+				<div class="JDAIflash-computer-border"></div>
+			</div>
+		</div>
+		<!-- 时尚达人结束 -->
+		
+		<!-- 生活百货开始 -->
+		<div class="JDAIflash-title">
+			<h3 class="JDAIflash-title-txt">
+				生活百货
+			</h3>
+		</div>
+		<div class="JDAIflash-box1">
+			<div class="JDRanking-box">
+				<div class="JDRanking-box-title">
+					<div>京东超市</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>精选超值好物</span>
+				</div>
+				<div class="JDRanking-box-redman">
+					<img src="img/红底肉松饼.jpg" alt="">
+				</div>
+				<div class="JDRanking-box-clothesbox">
+					<img src="img/白底绿团子.jpg" alt="">
+					<img src="img/白底月饼.webp" alt="">
+					<img src="img/白底藕粉.webp" alt="">
+				</div>
+			</div>
+			<div class="JDAIflash-phone">
+				<div class="JDAIflash-phone-title">
+					<div>京东超市</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>精选超值好物</span>
+				</div>
+				<div class="JDAIflash-phone-bighuang">
+					<div class="JDAIflash-phone-bighuang-tb"><img src="img/粉底纯甄.jpg" alt=""></div>
+					<div class="JDAIflash-phone-bighuang-tb">
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/绿底卫生纸.jpg" alt=""></div>
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/黄底食用油.jpg" alt=""></div>
+					</div>
+				</div>
+			</div>
+			<div class="JDAIflash-phone3">
+				<div class="JDAIflash-phone3-img">
+					<img src="img/蓝底马未都.jpg" alt="">
+				</div>
+				<div class="JDAIflash-phone3-border"></div>
+			</div>
+		</div>
+		<div class="JDAIflash-box1">
+			<div class="JDAIflash-computer">
+				<div class="JDAIflash-computer-img">
+					<img src="img/粉底大橙子.jpg" alt="">
+					<img src="img/黄底蓝月亮.jpg" alt="">
+				</div>
+				<div class="JDAIflash-computer-border"></div>
+			</div>
+			<div class="JDAIflash-phone">
+				<div class="JDAIflash-phone-title">
+					<div>头号玩家</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>骨灰级装备</span>
+				</div>
+				<div class="JDAIflash-phone-bighuang">
+					<img src="img/骨灰.jpg" alt="">
+				</div>
+			</div>
+			<div class="JDAIflash-phone">
+				<div class="JDAIflash-phone-title">
+					<div>图书集市</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>有读有品</span>
+				</div>
+				<div class="JDAIflash-phone-bighuang">
+					<div class="JDAIflash-phone-bighuang-tb"><img src="img/蓝底鸡汤.jpg" alt=""></div>
+					<div class="JDAIflash-phone-bighuang-tb"><img src="img/驯龙高手手办.jpg" alt=""></div>
+				</div>
+			</div>
+		</div>
+		<!-- 生活百货结束 -->
+		
+		<!-- 居家优品开始 -->
+		<div class="JDAIflash-title">
+			<h3 class="JDAIflash-title-txt">
+				居家优品
+			</h3>
+		</div>
+		<div class="JDAIflash-box1">
+			<div class="JDAIflash-computer">
+				<div class="JDAIflash-computer-img" style="width: 380px;height: 420px;">
+					<img src="img/五金电工.jpg" alt="">
+				</div>
+				<div class="JDAIflash-computer-border"></div>
+			</div>
+			<div class="JDAIflash-phone">
+				<div class="JDAIflash-phone-title">
+					<div>家电馆</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>家电好物节</span>
+				</div>
+				<div class="JDAIflash-phone-bighuang">
+					<div class="JDAIflash-phone-bighuang-tb"><img src="img/彩电冰箱洗衣机.jpg" alt=""></div>
+					<div class="JDAIflash-phone-bighuang-tb">
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/抽油烟机煤气灶.jpg" alt=""></div>
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/貌似是个加湿器.jpg" alt=""></div>
+					</div>
+				</div>
+			</div>
+			<div class="JDAIflash-phone">
+				<div class="JDAIflash-phone-title">
+					<div>我爱我家</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>品质生活家</span>
+				</div>
+				<div class="JDAIflash-phone-bighuang">
+					<div class="JDAIflash-phone-bighuang-tb"><img src="img/马桶吊灯智能锁.jpg" alt=""></div>
+					<div class="JDAIflash-phone-bighuang-tb">
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/西洋参5.jpg" alt=""></div>
+						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/黑色法拉利.jpg" alt=""></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- 居家优品结束 -->
+		
+		<!-- 企业采购 -->
+		<div class="JDAIflash-title">
+			<h3 class="JDAIflash-title-txt">
+				企业采购
+			</h3>
+		</div>
+		<div class="enterpriseProcurement">
+			
+			
+		</div>
+		<!-- 企业采购 -->
+		
+		<!-- JOY寻宝 -->
+		<div class="JDAIflash-title">
+			<h3 class="JDAIflash-title-txt">
+				JOY夺宝
+			</h3>
+		</div>
+		<div class="JOYTreasure">
+			
+		</div>
+		<!-- JOY寻宝 -->
+		
+		<!-- 特色推荐 -->
+		<div class="JDAIflash-title">
+			<h3 class="JDAIflash-title-txt">
+				特色推荐
+			</h3>
+		</div>
+		<div class="featuredRecommendation">
+			
+		</div>
+		<!-- 特色推荐 -->
+		
+		<!-- 京东直播 -->
+		<div class="JDAIflash-title">
+			<h3 class="JDAIflash-title-txt">
+				京东直播
+			</h3>
+		</div>
+		<div class="JDLIVE"></div>
+		<!-- 京东直播 -->
 	</body>
 </html>
