--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<title>京东</title>
 	</head>
 	<body>
+		<div class="huise"></div>
+<div class="soobigbox">
 		<!-- 京东头部开始 -->
 		<div class="JDheader-box">
 			<div class="JDheader-box-son">
@@ -56,8 +58,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- 京东头部结束 -->
-		
+		<!-- 京东头部结束 -->	
 		<!-- 京东搜索开始 -->
 		<div class="JDsearch-box">
 			<div class="JDsearch-box-son">
@@ -838,20 +839,34 @@
 				</div>
 				<div class="JDAIflash-computer-border"></div>
 			</div>
-			<div class="JDAIflash-phone">
-				<div class="JDAIflash-phone-title">
-					<div>家电馆</div>
-					<i class="iconfont icon-youbian"></i>
-					<span>家电好物节</span>
-				</div>
-				<div class="JDAIflash-phone-bighuang">
-					<div class="JDAIflash-phone-bighuang-tb"><img src="img/彩电冰箱洗衣机.jpg" alt=""></div>
-					<div class="JDAIflash-phone-bighuang-tb">
-						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/抽油烟机煤气灶.jpg" alt=""></div>
-						<div class="JDAIflash-phone-bighuang-tb-1"><img src="img/貌似是个加湿器.jpg" alt=""></div>
+			<div class="box-treasure">
+					<div class="treasure_scene_hd">
+						<h4>
+				新鲜沙拉   <span> * 好吃美味</span>
+			</h4>
+						<div class="treasure_scene_bd">
+							<div>
+								<img src="img/5ab61bc1Nbaa72c21.jpg" />
+							</div>
+							<div>
+								<img src="img/b1d42a025a2f7f46.jpg" />
+							</div>
+						</div>
+					</div>
+					<div class="treasure_scene_hd">
+						<h4>
+				美味早餐   <span> * 全天能量源泉</span>
+			</h4>
+						<div class="treasure_scene_bd">
+							<div>
+								<img src="img/59956089Nccd042c6.jpg" />
+							</div>
+							<div>
+								<img src="img/5b55a293N6a9a98bc.jpg" />
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
 			<div class="JDAIflash-phone">
 				<div class="JDAIflash-phone-title">
 					<div>我爱我家</div>
@@ -869,26 +884,133 @@
 		</div>
 		<!-- 居家优品结束 -->
 		
-		<!-- 企业采购 -->
-		<div class="JDAIflash-title">
-			<h3 class="JDAIflash-title-txt">
-				企业采购
-			</h3>
-		</div>
-		<div class="enterpriseProcurement">
-			
-			
-		</div>
-		<!-- 企业采购 -->
-		
 		<!-- JOY寻宝 -->
 		<div class="JDAIflash-title">
 			<h3 class="JDAIflash-title-txt">
 				JOY夺宝
 			</h3>
 		</div>
-		<div class="JOYTreasure">
-			
+		<div class="discovering">
+			<div class="discovering-box">
+				<div class="discovering-box-top">
+					<div class="discovering-img">
+						<div>
+							<span>吃鸡联盟</span>•必备神器
+						</div>
+					</div>
+				</div>
+				<div class="discovering-box-bottom">
+					<div class="discovering-bottom-img">
+						<img src="img/59e7093fN4111af89.jpg" />
+					</div>
+					<div class="discovering-bottom-img">
+						<img src="img/59e72845N7721eda9.jpg" />
+					</div>
+					<div class="discovering-bottom-img">
+						<img src="img/5bebce4eNd87c6449.jpg" />
+					</div>
+				</div>
+			</div>
+			<div class="discovering-box">
+				<div class="discovering-box-top">
+					<div class="discovering2-img">
+						<div>
+							<span>可爱女神</span>•粉红的心
+						</div>
+					</div>
+				</div>
+				<div class="discovering-box-bottom">
+					<div class="discovering-bottom-img">
+						<img src="img/1ea616ca8a2292fb.jpg" />
+					</div>
+					<div class="discovering-bottom-img">
+						<img src="img/58feb059Nad202de3.jpg" />
+					</div>
+					<div class="discovering-bottom-img">
+						<img src="img/5bbff73dN9f694d16.png" />
+					</div>
+				</div>
+			</div>
+			<div class="discovering-box">
+				<div class="discovering-box-top">
+					<div class="discovering3-img">
+						<div>
+							<span>游戏贵族</span>•土豪带我飞
+						</div>
+					</div>
+				</div>
+				<div class="discovering-box-bottom">
+					<div class="discovering-bottom-img">
+						<img src="img/10b21400200a4b85.jpg" />
+					</div>
+					<div class="discovering-bottom-img">
+						<img src="img/1dce172df9ab95ff.jpg" />
+					</div>
+					<div class="discovering-bottom-img">
+						<img src="img/5bebce4eNd87c6449.jpg" />
+					</div>
+				</div>
+			</div>
+			<div class="discovering-box">
+				<div class="discovering-box-top">
+					<div class="discovering4-img">
+						<div>
+							<span>自驾出游</span>•说走就走
+						</div>
+					</div>
+				</div>
+				<div class="discovering-box-bottom">
+					<div class="discovering-bottom-img">
+						<img src="img/107c550d05d2ca78.jpg" />
+					</div>
+					<div class="discovering-bottom-img">
+						<img src="img/5bea84d3Nb4e69282.jpg" />
+					</div>
+					<div class="discovering-bottom-img">
+						<img src="img/107c550d05d2ca78.jpg" />
+					</div>
+				</div>
+			</div>
+			<div class="discovering-box">
+				<div class="discovering-box-top">
+					<div class="discovering-img">
+						<div>
+							<span>初秋滋润</span>•秋季润美肤
+						</div>
+					</div>
+				</div>
+				<div class="discovering-box-bottom">
+					<div class="discovering-bottom-img">
+						<img src="img/5b35b3f0N5394b6b8.jpg" />
+					</div>
+					<div class="discovering-bottom-img">
+						<img src="img/5b35bNe63be761.jpg" />
+					</div>
+					<div class="discovering-bottom-img">
+						<img src="img/5b449400Nac959cd0.jpg" />
+					</div>
+				</div>
+			</div>
+			<div class="discovering-box">
+				<div class="discovering-box-top">
+					<div class="discovering-img">
+						<div>
+							<span>绝地求生</span>•带你吃鸡
+						</div>
+					</div>
+				</div>
+				<div class="discovering-box-bottom">
+					<div class="discovering-bottom-img">
+						<img src="img/5a24eaa2N2cb5e92c.jpg" />
+					</div>
+					<div class="discovering-bottom-img">
+						<img src="img/ce4eNd87c6449.jpg" />
+					</div>
+					<div class="discovering-bottom-img">
+						<img src="img/5e8fe0b936329e1b.jpg" />
+					</div>
+				</div>
+			</div>
 		</div>
 		<!-- JOY寻宝 -->
 		
@@ -898,8 +1020,37 @@
 				特色推荐
 			</h3>
 		</div>
-		<div class="featuredRecommendation">
-			
+		<div class="tstj-bigbox">
+			<div class="tstj-bigbox-sbox">
+				<div class="JDAIflash-phone-title">
+					<div>京东全球购</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>全球好物安心购</span>
+				</div>
+				<div class="tstj-bigbox-sbox-img">
+					<img src="img/3f378fdcf4dd06dd.jpg" alt="">
+				</div>
+			</div>
+			<div class="tstj-bigbox-sbox">
+				<div class="JDAIflash-phone-title">
+					<div>设计师推荐</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>设计师精选</span>
+				</div>
+				<div class="tstj-bigbox-sbox-img">
+					<img src="img/5aa90158Na918ef70.jpg" alt="">
+				</div>
+			</div>
+			<div class="tstj-bigbox-sbox">
+				<div class="JDAIflash-phone-title">
+					<div>环球时尚</div>
+					<i class="iconfont icon-youbian"></i>
+					<span>环球名品，奢华精选</span>
+				</div>
+				<div class="tstj-bigbox-sbox-img">
+					<img src="img/5b46f376Nc4abd5d3.jpg" alt="">
+				</div>
+			</div>
 		</div>
 		<!-- 特色推荐 -->
 		
@@ -909,7 +1060,222 @@
 				京东直播
 			</h3>
 		</div>
-		<div class="JDLIVE"></div>
+		<div class="streaming">
+			<div class="live">
+				<div class="live-box">
+					<div>
+						<div><<img src="img/live_btn.png" /></div>
+						<div>
+							精品秒杀
+						</div>
+					</div>
+				</div>
+				<div class="live-box">
+					<div>
+						<div><img src="img/live_btn.png" /></div>
+						<div>
+							放漏酬宾
+						</div>
+					</div>
+				</div>
+				<div class="live-box">
+					<div>
+						<div><img src="img/live_btn.png" /></div>
+						<div>
+							韩后抽奖
+						</div>
+					</div>
+				</div>
+				<div class="live-box">
+					<div>
+						<div><img src="img/live_btn.png" /></div>
+						<div>
+							低至三折起
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="live live2">
+				<div class="live2-box">
+					<div>
+						<div><img src="img/live_btn.png" /></div>
+						<div>
+							双胞胎小妹妹小轩深夜带你鉴赏美玉
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="live">
+				<div class="live-box">
+					<div>
+						<div><img src="img/live_btn.png" /></div>
+						<div>
+							随机赠礼物
+						</div>
+					</div>
+				</div>
+				<div class="live-box">
+					<div>
+						<div><img src="img/live_btn.png" /></div>
+						<div>
+							零元起拍
+						</div>
+					</div>
+				</div>
+				<div class="live-box">
+					<div>
+						<div><img src="img/live_btn.png" /></div>
+						<div>
+							雕刻师叫你看供料
+						</div>
+					</div>
+				</div>
+				<div class="live-box">
+					<div>
+						<div><img src="img/live_btn.png" /></div>
+						<div>
+							直播期间全店特价购
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<!-- 京东直播 -->
+		<!-- 底部开始 -->
+		<div class="mod">
+			<div class="duo">
+				<div class="mod-tit"></div>
+				品类齐全，轻送购物
+			</div>
+			<div class="kuai">
+				<div class="mod-tit"></div>
+				多仓直发，极速配送
+			</div>
+			<div class="hao">
+				<div class="mod-tit"></div>
+				正品行货，精致服务
+			</div>
+			<div class="sheng">
+				<div class="mod-tit"></div>
+				天天低价，畅选无忧
+			</div>
+		</div>
+		<div class="help">
+			<div class="help-nav">
+				<h5>购物指南</h5>
+				<ul>
+					<li>购物流程</li>
+					<li>会员介绍</li>
+					<li>生活旅行</li>
+					<li>常见问题</li>
+					<li>大家电</li>
+					<li>联系客服</li>
+				</ul>
+			</div>
+			<div class="help-nav">
+				<h5>配送方式</h5>
+				<ul>
+					<li>上门自提</li>
+					<li>211限时达</li>
+					<li>配送服务查询</li>
+					<li>配送费收取标准</li>
+					<li>海外配送</li>
+				</ul>
+			</div>
+			<div class="help-nav">
+				<h5>支付方式</h5>
+				<ul>
+					<li>货到付款</li>
+					<li>在线支付</li>
+					<li>分期付款</li>
+					<li>邮局汇款</li>
+					<li>公司转账</li>
+				</ul>
+			</div>
+			<div class="help-nav">
+				<h5>售后服务</h5>
+				<ul>
+					<li>售后政策</li>
+					<li>价格保护</li>
+					<li>退款说明</li>
+					<li>返修/退换货</li>
+					<li>取消订单</li>
+				</ul>
+			</div>
+			<div class="help-nav">
+				<h5>特色服务</h5>
+				<ul>
+					<li>夺宝岛</li>
+					<li>DIY装机</li>
+					<li>延保服务</li>
+					<li>京东E卡</li>
+					<li>京东通信</li>
+					<li>京东JD+</li>
+				</ul>
+			</div>
+			<div class="help-nav help-nav-last">
+				<h5>京东自营覆盖区县</h5>
+				<div class="help-nav-last-text">
+					<p>京东已向全国2661个区县提供自营配送服务，支持货到付款、POS机刷卡和售后上门服务。</p>
+					<p>查看详情 ></p>
+				</div>
+			</div>
+		</div>
+		<div class="inner">
+			<div class="inner-top">
+				<a href="">关于我们</a><span>|</span>
+				<a href="">联系我们</a><span>|</span>
+				<a href="">联系客服</a><span>|</span>
+				<a href="">合作招商</a><span>|</span>
+				<a href="">商家帮助</a><span>|</span>
+				<a href="">营销中心</a><span>|</span>
+				<a href="">手机京东</a><span>|</span>
+				<a href="">友情链接</a><span>|</span>
+				<a href="">销售联盟</a><span>|</span>
+				<a href="">京东社区</a><span>|</span>
+				<a href="">风险监测</a><span>|</span>
+				<a href="">隐私公布</a><span>|</span>
+				<a href="">京东利益</a><span>|</span>
+				<a href="">这是英文</a><span>|</span>
+				<a href="">还是英文</a><span>|</span>
+			</div>
+			<div class="inner-info">
+				<p>
+					<a href="">京公网安备 11000002000088号</a><span>|</span>
+					<a href="">京ICP证070359号</a><span>|</span>
+					<a href="">互联网药品信息服务资格证编号(京)-经营性-2014-0008</a><span>|</span>
+					<a href="">新出发京零 字第大120007号</a><span>|</span></p>
+				<p>
+					<a href="">互联网出版许可证编号新出网证(京)字150号</a><span>|</span>
+					<a href="">出版物经营许可证</a><span>|</span>
+					<a href="">网络文化经营许可证京网文[2014]2148-348号</a><span>|</span>
+					<a href="">违法和不良信息举报电话：4006561155</a><span>|</span></p>
+				<p>
+					<a href="">Copyright © 2004 - 2019  京东JD.com 版权所有</a><span>|</span>
+					<a href="">消费者维权热线：4006067733经营证照</a><span>|</span>
+					<a href="">(京)网械平台备字(2018)第00003号</a><span>|</span>
+					<a href="">营业执照</a><span>|</span></p>
+				<p>
+					<a href="">Global Site</a><span>|</span>
+					<a href="">Сайт России</a><span>|</span>
+					<a href="">Situs Indonesia</a><span>|</span>
+					<a href="">Sitio de España</a><span>|</span>
+					<a href="">เว็บไซต์ประเทศไทย</a><span>|</span></p>
+			</div>
+			<div class="inner-bottom">
+				<div class="inner-bottom-box">
+				</div>
+				<div class="inner-bottom-box">
+				</div>
+				<div class="inner-bottom-box">
+				</div>
+				<div class="inner-bottom-box">
+				</div>
+				<div class="inner-bottom-box">
+				</div>
+			</div>
+		</div>
+		<!-- 底部结束 -->
+</div>
 	</body>
 </html>
